examples/test/testpolicy14719.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14719
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key29: value23
      key31: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value27
          key30: value38
          key24: value38
      podSelector:
        matchLabels:
          key37: value40
          key48: value27
